{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 24,
  "lineage": "13adc541-687d-e431-bd49-3844b0ed7be8",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f467b6810d6db3f",
            "arn": "arn:aws:ec2:ap-south-1:853845817090:instance/i-0a1729c98b33bfd72",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1729c98b33bfd72",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010c824ebe8ec772d",
            "private_dns": "ip-50-0-1-251.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.0.1.251",
            "public_dns": "ec2-13-233-108-107.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.108.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-003082e554fff1875",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088831a6d3d7b619d",
            "tags": {
              "Name": "valhalla-Web-server"
            },
            "tags_all": {
              "Name": "valhalla-Web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f760ebef60889da1"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.web_sg",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dee42289095b436",
            "association_id": "eipassoc-010850dac92d742d2",
            "domain": "vpc",
            "id": "eipalloc-03dee42289095b436",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-00e46716157b4d5a9",
            "private_dns": "ip-50-0-1-146.ap-south-1.compute.internal",
            "private_ip": "50.0.1.146",
            "public_dns": "ec2-43-205-50-23.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.50.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-a"
            },
            "tags_all": {
              "Name": "eip-nat-a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dee42289095b436",
            "association_id": "eipassoc-010850dac92d742d2",
            "connectivity_type": "public",
            "id": "nat-012595dcc0f21f28c",
            "network_interface_id": "eni-00e46716157b4d5a9",
            "private_ip": "50.0.1.146",
            "public_ip": "43.205.50.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088831a6d3d7b619d",
            "tags": {
              "Name": "nat-a"
            },
            "tags_all": {
              "Name": "nat-a"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.eip-nat-a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:route-table/rtb-0848b0ddb5e0629a5",
            "id": "rtb-0848b0ddb5e0629a5",
            "owner_id": "853845817090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-012595dcc0f21f28c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pri-rt-a"
            },
            "tags_all": {
              "Name": "Pri-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.eip-nat-a",
            "module.nat.aws_nat_gateway.nat-a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-sub-1a-with-Pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0febda741d9c5b591",
            "route_table_id": "rtb-0848b0ddb5e0629a5",
            "subnet_id": "subnet-017460cef23d57fae"
          },
          "dependencies": [
            "module.nat.aws_eip.eip-nat-a",
            "module.nat.aws_nat_gateway.nat-a",
            "module.nat.aws_route_table.pvt-rt-a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pvt_sub_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-sub-2b-with-Pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054b7817400f61d73",
            "route_table_id": "rtb-0848b0ddb5e0629a5",
            "subnet_id": "subnet-0b72ea5b591f715d5"
          },
          "dependencies": [
            "module.nat.aws_eip.eip-nat-a",
            "module.nat.aws_nat_gateway.nat-a",
            "module.nat.aws_route_table.pvt-rt-a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pvt_sub_2b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-sub-3b-with-pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e6bfd7d902bfa2b",
            "route_table_id": "rtb-0848b0ddb5e0629a5",
            "subnet_id": "subnet-00fa2e85116c6c8e5"
          },
          "dependencies": [
            "module.nat.aws_eip.eip-nat-a",
            "module.nat.aws_nat_gateway.nat-a",
            "module.nat.aws_route_table.pvt-rt-a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pvt_sub_3c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:security-group/sg-0f760ebef60889da1",
            "description": "Allow SSH \u0026 HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f760ebef60889da1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from WWW",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from WWW",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "853845817090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "valhalla-SSH-HTTP"
            },
            "tags_all": {
              "Name": "valhalla-SSH-HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:internet-gateway/igw-0768f18bb773dd918",
            "id": "igw-0768f18bb773dd918",
            "owner_id": "853845817090",
            "tags": {
              "Name": "valhalla-igw"
            },
            "tags_all": {
              "Name": "valhalla-igw"
            },
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:route-table/rtb-02abe303f93ca3a09",
            "id": "rtb-02abe303f93ca3a09",
            "owner_id": "853845817090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0768f18bb773dd918",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "valhalla-Public-rt"
            },
            "tags_all": {
              "Name": "valhalla-Public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-1a_route_table_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d86c0c31543ec568",
            "route_table_id": "rtb-02abe303f93ca3a09",
            "subnet_id": "subnet-088831a6d3d7b619d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-2b_route_table_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0718c1cc48c5f54e1",
            "route_table_id": "rtb-02abe303f93ca3a09",
            "subnet_id": "subnet-0703b6f326081fc91"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-3c_route_table_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065e676afa429be9f",
            "route_table_id": "rtb-02abe303f93ca3a09",
            "subnet_id": "subnet-0cd42d0e4d48ffdbe"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pub_sub_3c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:subnet/subnet-088831a6d3d7b619d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "50.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088831a6d3d7b619d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853845817090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "valhalla-pub-sub-1"
            },
            "tags_all": {
              "Name": "valhalla-pub-sub-1"
            },
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:subnet/subnet-0703b6f326081fc91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "50.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0703b6f326081fc91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853845817090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "valhalla-pub-sub-2"
            },
            "tags_all": {
              "Name": "valhalla-pub-sub-2"
            },
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_3c",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:subnet/subnet-0cd42d0e4d48ffdbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "50.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd42d0e4d48ffdbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853845817090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "valhalla-pub-sub-3"
            },
            "tags_all": {
              "Name": "valhalla-pub-sub-3"
            },
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub_1a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:subnet/subnet-017460cef23d57fae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "50.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017460cef23d57fae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853845817090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "valhalla-pvt-sub-1"
            },
            "tags_all": {
              "Name": "valhalla-pvt-sub-1"
            },
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub_2b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:subnet/subnet-0b72ea5b591f715d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "50.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b72ea5b591f715d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853845817090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "valhalla-pvt-sub-2"
            },
            "tags_all": {
              "Name": "valhalla-pvt-sub-2"
            },
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub_3c",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:subnet/subnet-00fa2e85116c6c8e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "50.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fa2e85116c6c8e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853845817090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "valhalla-pvt-sub-3"
            },
            "tags_all": {
              "Name": "valhalla-pvt-sub-3"
            },
            "vpc_id": "vpc-081a1b5feb1212e02"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:853845817090:vpc/vpc-081a1b5feb1212e02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "50.0.0.0/16",
            "default_network_acl_id": "acl-099860dcd2cb59fb5",
            "default_route_table_id": "rtb-06dac74b227c99c34",
            "default_security_group_id": "sg-0a0030aee6c09b987",
            "dhcp_options_id": "dopt-019d7635f3c3d0182",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081a1b5feb1212e02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06dac74b227c99c34",
            "owner_id": "853845817090",
            "tags": {
              "Name": "valhalla-vpc"
            },
            "tags_all": {
              "Name": "valhalla-vpc"
            }
          }
        }
      ]
    }
  ]
}